--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,72 @@
 .App-link {
   color: #09d3ac;
 }
+
+.Container {
+  width: 500px;
+  border: 1px solid #fff;
+  padding: 10px;
+  box-shadow: 1px 1px 20px #888888;
+}
+
+.Footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  padding: 2px 8px;
+  background: #888;
+  font-size: 12px;
+}
+
+.Filter {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2px;
+  width: 40%;
+}
+
+.Add-todo {
+  display: flex;
+  justify-content: flex-start;
+  background: #fff;
+  padding: 0 0 0 20px;
+}
+
+input {
+  border: none;
+  outline: none;
+  width: 100%;
+}
+
+.All-is-not-ticked {
+  opacity: .3;
+}
+
+.All-is-ticked {
+  opacity: 1;
+}
+
+.ClearButton:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+
+a.Filter-state{
+  text-decoration: none;
+  color: #fff;
+  padding: 4px;
+  border-radius: 2px;
+  box-sizing: border-box;
+}
+
+a.Filter-state:hover {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+}
+
+a.Filter-state-selected {
+  border: 1px solid rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+}
